--- a/css/intranet2.css
+++ b/css/intranet2.css
@@ -42,10 +42,6 @@ button, .rentRoom {
 	margin:5px 0;
 	padding:5px 10px;
 	display: block;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	-ms-border-radius: 3px;
-	-o-border-radius: 3px;
 	border-radius: 3px;
 }
 button.inline {
@@ -138,10 +134,6 @@ button:disabled,button:disabled:hover,
 	font-size: 14px;
 	font-weight: normal;
 	z-index: 2;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-ms-border-radius: 5px;
-	-o-border-radius: 5px;
 	border-radius: 5px;
 }
 .right .help:hover:before {
@@ -218,10 +210,10 @@ ul > li > button {
 	padding: 15px 0 5px 0;
 }
 #lottery #winner:before {
-	content: 'Winner number: ';
+	content: '获奖号码: ';
 }
 #lottery #owned:before {
-	content: 'Your number: ';
+	content: '你的号码: ';
 }
 #lottery #info {
 	background-color: rgba(0, 0, 0, .05);
@@ -376,10 +368,6 @@ ul > li > button {
     right: 0;
     background-color: #FFF;
     min-width: 100px;
-    -webkit-border-radius: 0 0 3px 3px;
-	-moz-border-radius: 0 0 3px 3px;
-	-ms-border-radius: 0 0 3px 3px;
-	-o-border-radius: 0 0 3px 3px;
 	border-radius: 0 0 3px 3px;
 	-webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, .3);
 	box-shadow: 0 3px 3px rgba(0, 0, 0, .3);
@@ -392,10 +380,6 @@ ul > li > button {
 	border: 0;
 	font-size: 14px;
 	background-color: #222;
-	-webkit-border-radius: 0 0 3px 3px;
-	-moz-border-radius: 0 0 3px 3px;
-	-ms-border-radius: 0 0 3px 3px;
-	-o-border-radius: 0 0 3px 3px;
 	border-radius: 0 0 3px 3px;
 }
 .dropdown:hover .dropdown-content {
